Rsdev 477 check format compatibility (#10)
* add test chemistry files

* increase timeout as required for converting larger files

* attempt conversion with openbabel first - smiles can be ambiguous and since openbabel is used for search, it should be the first choice for generating smiles for the search index for better compatibility. improve logging by truncating long input strings.

* include name in logging for conversion tests.

* update tests to reflect Openbabel being used first for conversion. formatting. Re-enable integration test for conversion to smiles as a sanity test for converting the most used files. formatting

* add command for running integration tests to README.

* add default empty string for extraction result name, so that the name row in the front-end table isn't rendered if the chemical doesn't have a name, matching original chemistry functionality

* Use StringUtils abbreviate for safer truncation.

---------

Co-authored-by: rs-fraser <fraser.macinnes>